--- a/risk_analysis/templates/risk_analysis/error.html
+++ b/risk_analysis/templates/risk_analysis/error.html
@@ -19,7 +19,8 @@
             <code style="color: #c00;">{{ error }}</code>
         </div>
 
-        <a href="{% url 'index' %}" class="btn btn-next" style="text-decoration: none; display: inline-block;">Volver a
+        <a href="{% url 'questionnaire' %}" class="btn btn-next"
+            style="text-decoration: none; display: inline-block;">Volver a
             intentar</a>
     </div>
 </body>
